[gd_scene load_steps=5 format=3 uid="uid://dd8padwwgwlvi"]

[ext_resource type="Script" uid="uid://d0hrkx1aqvjcn" path="res://Spawner/wave_system.gd" id="1_3g41v"]

[sub_resource type="Animation" id="Animation_3g41v"]
resource_name = "RoundSplashScreen"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("CanvasLayer/MarginContainer/SplashScreen/SplashScreenText:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.33333334, 0.6666667, 2.3333333, 2.5666666),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/MarginContainer/VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 2.7666667, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8333333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"update_round_counter"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/MarginContainer/SplashScreen:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.56666666, 2.4333334, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_h5r6v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/MarginContainer/SplashScreen/SplashScreenText:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/MarginContainer/VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/MarginContainer/SplashScreen:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_81acg"]
_data = {
&"RESET": SubResource("Animation_h5r6v"),
&"RoundSplashScreen": SubResource("Animation_3g41v")
}

[node name="WaveSystem" type="Node2D"]
script = ExtResource("1_3g41v")

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
offset_left = 60.0
offset_top = 67.0
offset_right = 1093.0
offset_bottom = 580.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="RoundProgressBar" type="ProgressBar" parent="CanvasLayer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 20)
layout_mode = 2
size_flags_horizontal = 4
show_percentage = false

[node name="RoundCounter" type="RichTextLabel" parent="CanvasLayer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "[center]Round: [/center]"
fit_content = true

[node name="SplashScreen" type="Control" parent="CanvasLayer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/MarginContainer/SplashScreen"]
layout_mode = 0
offset_left = 225.0
offset_top = 199.0
offset_right = 780.0
offset_bottom = 320.0
color = Color(0, 0, 0, 1)

[node name="SplashScreenText" type="RichTextLabel" parent="CanvasLayer/MarginContainer/SplashScreen"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 215.0
offset_right = 1033.0
offset_bottom = 298.0
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[shake][center]Round: [/center]"
fit_content = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_81acg")
}

[connection signal="child_exiting_tree" from="EnemyContainer" to="." method="_on_enemy_container_child_exiting_tree"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
